# fleek

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: cli.rs  decode.rs  main.rs
src/encode/: encode_file.rs  encode_text.rs  generic_encode.rs  mod.rs
