[package]
name = "fleek"
version = "0.1.6"
edition = "2024"
authors = ["xxvolt"]
license = "MIT"
description = "Image steganography tool"
repository = "https://github.com/voltatiasap-afk/fleek"
keywords = ["steganography", "image"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
cargo = "0.94.0"
clap = { version = "4.5.58", features = ["cargo", "derive"] }
colored = "3.1.1"
flate2 = "1.1.9"
image = "0.25.9"
infer = "0.19.0"
